Multiple updates:   - Replace blog link with medium link   - Remove Quora, Insta, FB Links   - Remove 'Technologies' section   - Update social meta tags   - Delete README.md and update .gitignore

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
 		<meta name="author" content="Anirudh Goel" />
 		<meta name="designer" content="Anirudh Goel" />
-		<meta name="description" content="Anirudh Goel | Summer Student at CERN" />
+		<meta name="description" content="Anirudh Goel's web page" />
 		<meta name="robots" content="index, follow" />
 		<!-- Facebook -->
 		<meta property="og:url" content="https://www.anirudhgoel.me" />
@@ -14,21 +14,17 @@
 		<meta property="og:title" content="Anirudh Goel" />
 		<meta property="og:type" content="website" />
 		<meta property="og:image" content="img/social-image.jpg" />
-		<meta property="og:description" content="Anirudh Goel | Summer Student at CERN" />
+		<meta property="og:description" content="Anirudh Goel's web page" />
 		<!-- LinkedIn -->
-		<meta property='og:title' content='Anirudh Goel' />
-		<meta property='og:image' content='img/social-image.jpg' />
-		<meta property='og:description' content='Anirudh Goel | Software Developer | Summer Student at CERN' />
-		<meta property='og:url' content='https://anirudhgoel.me' />
-		<!-- Google Plus -->
-		<meta itemprop="name" content="Anirudh Goel" />
-		<meta itemprop="description" content="Anirudh Goel | Summer Student at CERN" />
-		<meta itemprop="image" content="img/social-image.jpg" />
+		<meta property="og:title" content="Anirudh Goel" />
+		<meta property="og:image" content="img/social-image.jpg" />
+		<meta property="og:description" content="Anirudh Goel's web page" />
+		<meta property="og:url" content="https://anirudhgoel.me" />
 		<!-- Twitter -->
 		<!-- <meta name="twitter:card" content="summary_large_image" /> -->
 		<meta name="twitter:card" content="summary" />
 		<meta name="twitter:title" content="Anirudh Goel" />
-		<meta name="twitter:description" content="Anirudh Goel | Summer Student at CERN" />
+		<meta name="twitter:description" content="Anirudh Goel's web page" />
 		<meta name="twitter:site" content="@AnirudhDelhi" />
 		<meta name="twitter:creator" content="@AnirudhDelhi" />
 		<meta name="twitter:url" content="https://www.anirudhgoel.me" />
@@ -83,11 +79,6 @@
 								Projects
 							</a>
 						</li>
-						<li>
-							<a id="techButton" onclick="autoScroll('page4');">
-								Technologies
-							</a>
-						</li>
 					</ul>
 					<ul class='nav navbar-nav navbar-right'>
 						<li class="dropdown">
@@ -97,27 +88,9 @@
 							</a>
 							<ul class="dropdown-menu">
 								<li>
-									<a href="https://www.instagram.com/anirudhdelhi/" target='_blank'>
-										<i class='fab fa-instagram'></i>
-										&nbsp;Instagram
-									</a>
-								</li>
-								<li>
-									<a href="https://www.facebook.com/profile.php?id=100008384688733" target='_blank'>
-										<i class='fab fa-facebook-f'></i>
-										&nbsp;Facebook
-									</a>
-								</li>
-								<li>
 									<a href="https://twitter.com/AnirudhDelhi" target='_blank'>
 										<i class='fab fa-twitter'></i>
 										&nbsp;Twitter
-									</a>
-								</li>
-								<li>
-									<a href="https://www.quora.com/profile/Anirudh-Goel-6" target='_blank'>
-										<i class='fab fa-quora'></i>
-										&nbsp;Quora
 									</a>
 								</li>
 								<li>
@@ -143,9 +116,9 @@
 							</a>
 						</li>
 						<li>
-							<a href="https://blog.anirudhgoel.me/" target='_blank'>
-								<i class="fas fa-pencil-alt"></i>
-								&nbsp;Blog
+							<a href="https://medium.com/@goelanirudh" target='_blank'>
+								<i class="fas fa-medium-m"></i>
+								&nbsp;Medium
 							</a>
 						</li>
 						<li>
@@ -518,71 +491,6 @@
 				</div>
 			</section>
 
-
-			<section class="page4 parallax-window" data-parallax="scroll" data-image-src="img/back4.jpg">
-				<br><br><br>
-				<div class='headings'>
-					Technical Competencies
-				</div>
-				<br><br>
-				<div class="container">
-					<div class="row">
-						<div class="col-sm-4">
-							<div class="tech-box1 wow fadeInUp">
-								<a href="https://en.wikipedia.org/wiki/HTML" target="_blank">Hypertext Markup Language 5</a><br><br>
-								<a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS3" target="_blank">Cascading Style Sheets 3</a><br><br>
-								<a href="https://medium.freecodecamp.org/write-less-do-more-with-javascript-es6-5fd4a8e50ee2" target="_blank">Javascript (ES5 & ES6)</a><br><br>
-								<a href="https://nodejs.org/en/" target="_blank">Node.js</a><br><br>
-								<a href="https://expressjs.com/" target="_blank">Express Framework</a><br><br>
-								<a href="https://en.wikipedia.org/wiki/Single-page_application" target="_blank">Single Page Applications (SPA)</a><br><br>
-								<a href="https://stackoverflow.com/questions/21965738/what-is-virtual-dom" target="_blank">Virtual DOM</a><br><br>
-								<a href="https://www.nginx.com/" target="_blank">Nginx</a>
-								<a href="https://www.python.org/" target="_blank">Python</a><br><br>
-								<a href="https://getbootstrap.com/docs/4.0/getting-started/introduction/" target="_blank">Bootstrap, UIKit : CSS Frameworks</a><br><br>
-								<a href="https://jquery.com/" target="_blank">jQuery : JS Library</a><br><br>
-								<a href="https://git-scm.com/" target="_blank">Git</a><br><br>
-								<a href="https://www.ansible.com/" target="_blank">Ansible Automation</a><br><br>
-								<a href="www.fabfile.org/" target="_blank">Fabric (fabfile.org)</a><br><br>
-							</div>
-						</div>
-						<div class="col-sm-4">
-							<div class="tech-box2 wow fadeInUp">
-								<a href="https://www.djangoproject.com/" target="_blank">Django : Python Framework</a><br><br>
-								<a href="flask.pocoo.org/" target="_blank">Flask : Python Micro Framework</a><br><br>
-								<a href="https://www.w3schools.com/pHP/default.asp" target="_blank">PHP</a><br><br>
-								<a href="https://www.slimframework.com/" target="_blank">Slim : PHP Micro Framework</a><br><br>
-								<a href="https://developers.google.com/web/fundamentals/codelabs/push-notifications/" target="_blank">Web Push Notifications</a><br><br>
-								<a href="https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API" target="_blank">Web Sockets</a><br><br>
-								<a href="https://www.mysql.com/" target="_blank">MySQL RDBMS</a><br><br>
-								<a href="https://www.postgresql.org/" target="_blank">PostgreSQL</a><br><br>
-								<a href="https://firebase.google.com/docs/web/setup" target="_blank">Firebase BaAS</a><br><br>
-								<a href="https://travis-ci.org/" target="_blank">Travis CI</a><br><br>
-								<a href="https://gulpjs.com" target="_blank">Gulp</a><br><br>
-								<a href="https://mochajs.org/" target="_blank">Mocha Test Framework</a><br><br>
-								<a href="https://qunitjs.com/" target="_blank">QUnit Test Framework</a><br><br>
-							</div>
-						</div>
-						<div class="col-sm-4">
-							<div class="tech-box3 wow fadeInUp">
-								<a href="https://oauth.net/2/" target="_blank">OAuth Authorization</a><br><br>
-								<a href="openid.net/connect/" target="_blank">OpenID Connect Authentication</a><br><br>
-								<a href="https://www.heroku.com/" target="_blank">Heroku CLI</a><br><br>
-								<a href="https://ngrok.com/" target="_blank">Ngrok</a><br><br>
-								<a href="https://www.w3schools.com/xml/ajax_intro.asp" target="_blank">Asynchronous JavaScript and XML (AJAX)</a><br><br>
-								<a href="https://www.json.org/" target="_blank">JavaScript Object Notation (JSON)</a><br><br>
-								<a href="https://www.w3schools.com/htmL/html5_webstorage.asp" target="_blank">Cookies and Browser Storage</a><br><br>
-								<a href="https://en.wikipedia.org/wiki/Browser_extension" target="_blank">Browser Extensions</a><br><br>
-								<a href="https://ionicframework.com/" target="_blank">Ionic</a><br><br>
-								<a href="https://www.geeksforgeeks.org/c-plus-plus/" target="_blank">C/C++</a><br><br>
-								<a href="https://www.adobe.com/products/photoshop.html" target="_blank">Adobe Photoshop</a><br><br>
-								<a href="https://www.adobe.com/products/illustrator.html" target="_blank">Adobe Illustrator</a><br><br>
-								<a href="https://wordpress.org/download/" target="_blank">Wordpress</a><br><br>
-							</div>
-						</div>
-					</div>
-				</div>
-				<br>
-			</section>
 			<section class="footer">
 				 <form style="padding:3px;text-align:center;" action="https://tinyletter.com/anirudhgoel" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/anirudhgoel', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">Subscribe to Anirudh's Newsletter</label></p><p><input type="text" style="width:250px" name="email" id="tlemail" placeholder="Enter your email address" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" class="subscribe-button" /></form>
 				 <div class='foot-text row'>
