Update Medium icon

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 						</li>
 						<li>
 							<a href="https://medium.com/@goelanirudh" target='_blank'>
-								<i class="fas fa-medium-m"></i>
+								<i class="fab fa-medium-m"></i>
 								&nbsp;Medium
 							</a>
 						</li>
