Remove extra projects and reformat projects section

--- a/index.html
+++ b/index.html
@@ -254,25 +254,20 @@
                     <div class="row reponsive">
                         <div class='col-sm-12'>
                             <div class='headings'>
-                                Personal Projects
+                                Open Source Projects
                             </div>
                         </div>
                     </div>
                     <br>
                     <div class='proj-text'>
                         <div class='row'>
-                            <div class='col-sm-4 wow fadeInLeft' align="center">
+<!--                            <div class="col-sm-1"></div>-->
+                            <div class='col-sm-6 wow fadeInLeft' align="center">
                                 <img src="img/projects/Cale.jpg" alt='Productive Calender' class='thumbnail proj-img'>
                                 <div class='proj-panel'>
                                     <div class='panel'>
-                                        <div class='panel-heading'>
-                                            <div class='proj-panel-heading'>
-                                                <strong>
-                                                    Productive Calender
-                                                </strong>
-                                            </div>
-                                        </div>
                                         <div class='panel-body'>
+                                            <div class="panel-title">Productive Calender</div>
                                             A Django based application that functions as a <strong>complete planner</strong> with features like <strong>event organizing, Google Calender Sync, weather details, on-screen clock, responsive design and a beautiful UI</strong>.<br><br>
                                             <strong><a href="https://github.com/AnirudhGoel/Calender" target='_blank'>Github</a> |
                                             <a href="https://productive-calender.herokuapp.com/" target='_blank'>Demo</a></strong>
@@ -283,18 +278,12 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class='col-sm-4 wow fadeInUp' align="center">
+                            <div class='col-sm-6 wow fadeInUp' align="center">
                                 <img src="img/projects/pinterest.png" alt='Pinterest Automatic' class='thumbnail proj-img'>
                                 <div class='proj-panel'>
                                     <div class='panel'>
-                                        <div class='panel-heading'>
-                                            <div class='proj-panel-heading'>
-                                                <strong>
-                                                    PinAutomatic
-                                                </strong>
-                                            </div>
-                                        </div>
                                         <div class='panel-body'>
+                                            <div class="panel-title">PinAutomatic</div>
                                             This is a webapp to <strong>pin all images of one Pinterest Board to another</strong> automatically. Hosted on Heroku, it uses <strong>Heroku Postgres as Database, flask-user package for User Management, Redis To Go server to store the pinning tasks in a queue</strong>.
                                             Started as a hobby project, it has been approved by Pinterest is currently being used by <strong>100+ users and has re-pinned 200,000+ pins</strong> till date.
                                             <br><br>
@@ -306,67 +295,17 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class='col-sm-4 wow fadeInRight' align="center">
-                                <img src="img/projects/whatsapp.png" alt='Whatsapp Emoji Suggestion' class='thumbnail proj-img'>
-                                <div class='proj-panel'>
-                                    <div class='panel'>
-                                        <div class='panel-heading'>
-                                            <div class='proj-panel-heading'>
-                                                <strong>
-                                                    Whatsapp Emoticon Suggestions
-                                                </strong>
-                                            </div>
-                                        </div>
-                                        <div class='panel-body'>
-                                            Chrome Browser extension to convert text smileys to <strong>WhatsApp Emoticons</strong> and also provide <strong>suggestions of similar smilies</strong> (with shortcuts) for Whatsapp Web.<br><br>
-                                            <strong><a href="https://github.com/AnirudhGoel/Whatsapp-Emoticons-Suggest" target='_blank'>Github</a> |
-                                            <a href="https://chrome.google.com/webstore/detail/whatsapp-emoticons-sugges/pdicajhpekmkjildobfnokpdmnejlnfm?hl=en-US&gl=IN" target='_blank'>Chrome Download</a></strong> | <strong><a href="https://addons.mozilla.org/addon/wa-emoticon-suggestions/" target="_blank">Mozilla Download</a></strong>
-                                        </div>
-                                        <div class='panel-footer'>
-                                            JS, jQuery
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+<!--                            <div class="col-sm-1"></div>-->
                         </div>
                     </div>
                     <div class='proj-text'>
                         <div class='row'>
-                            <div class='col-sm-4 wow fadeInLeft' align="center">
-                                <img src="img/projects/chatbot.png" alt='Chatbot' class='thumbnail proj-img'>
-                                <div class='proj-panel'>
-                                    <div class='panel'>
-                                        <div class='panel-heading'>
-                                            <div class='proj-panel-heading'>
-                                                <strong>
-                                                    Education and Fun Chatbot
-                                                </strong>
-                                            </div>
-                                        </div>
-                                        <div class='panel-body'>
-                                            This Chatbot provides you with both, educational and witty answers.
-                                            It uses multiple APIs to fetch different types of answers - <strong>HP HavenOn Demand, Wikipedia API, Google YouTube API, Pandora Bots API</strong>. Sometimes it gives you descriptive and informative answers, at other times it's just lousy.<br><br>
-                                            <strong><a href="https://github.com/AnirudhGoel/Chatbot" target='_blank'>Github</a> |
-                                            <a href="https://edu-chatbot.herokuapp.com/" target='_blank'>Demo</a></strong>
-                                        </div>
-                                        <div class='panel-footer'>
-                                            PHP, API, JS, jQuery, HTML5, CSS3, Bootstrap
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class='col-sm-4 wow fadeInUp' align="center">
+                            <div class='col-sm-6 wow fadeInUp' align="center">
                                 <img src="img/projects/interest.jpg" alt='Interests Ranker' class='thumbnail proj-img'>
                                 <div class='proj-panel'>
                                     <div class='panel'>
-                                        <div class='panel-heading'>
-                                            <div class='proj-panel-heading'>
-                                                <strong>
-                                                    Interests Ranker
-                                                </strong>
-                                            </div>
-                                        </div>
                                         <div class='panel-body'>
+                                            <div class="panel-title">Interests Ranker</div>
                                             A webapp which displays <strong>common interests</strong> of a group of people in form of a <strong>prioritized list</strong> by reading their Github Profiles. Can be used for knowing the audience for hosting a workshop or educational session or for knowing the strengths of some Hackathon team.<br><br>
                                             <strong><a href="https://github.com/AnirudhGoel/Interests-Ranker" target='_blank'>Github</a> |
                                             <a href="https://interests-ranker.herokuapp.com/sample/index.html" target='_blank'>Demo</a></strong>
@@ -377,16 +316,12 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class='col-sm-4 wow fadeInRight' align="center">
+                            <div class='col-sm-6 wow fadeInRight' align="center">
                                 <img src="img/projects/ToDo.png" alt='To Do List' class='thumbnail proj-img'>
                                 <div class='proj-panel'>
                                     <div class='panel'>
-                                        <div class='panel-heading'>
-                                            <div class='proj-panel-heading'>
-                                                <strong>To Do List</strong>
-                                            </div>
-                                        </div>
                                         <div class='panel-body'>
+                                            <div class="panel-title">No Server To Do List</div>
                                             A web-app to list down all your To-Do tasks because every now and then we need to write down our chores. A completely front-end based To Do List made using JavaScript, jQuery and Browser Local Storage.<br><br>
                                             <strong><a href="https://github.com/AnirudhGoel/To-Do-List" target='_blank'>Github</a> | <a href="http://anirudhgoel.github.io/To-Do-List/" target="_blank">Demo</a></strong>
                                         </div>
