--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             <section class="footer">
                 <div class='foot-text row'>
                     <center>
-                            Copyrights &copy; Anirudh Goel |
+                            &copy; 2015-22 Anirudh Goel |
                         <strong>
                             <a href="http://madewithlove.org.in" target="_blank" style="color:white;text-decoration:none;">Made with <span style="color: #f7403a;font-size: 22px">&hearts;</span> in India</a>
                         </strong>
