Update tech in projects

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                                             <a href="https://productive-calender.herokuapp.com/" target='_blank'>Demo</a></strong>
                                         </div>
                                         <div class='panel-footer'>
-                                            Django, PostgreSQL, Python, Heroku CLI, Google Calender API, HTML5, Vanilla CSS3, jQuery
+                                            Django, PostgreSQL, Heroku CLI, Google Calender API, HTML5, Vanilla CSS3, jQuery
                                         </div>
                                     </div>
                                 </div>
@@ -290,7 +290,7 @@
                                             <strong><a href="https://pinautomatic.herokuapp.com/" target='_blank'>Live App</a></strong>
                                         </div>
                                         <div class='panel-footer'>
-                                            Flask, Python, Redis To Go, Postgres, Pinterest API, Minimalistic UI, Pinterest OAuth 2.0, Bootstrap
+                                            Flask, Redis To Go, PostgreSQL, Pinterest API, Pinterest OAuth 2.0, Bootstrap
                                         </div>
                                     </div>
                                 </div>
