--- a/index.html
+++ b/index.html
@@ -261,16 +261,18 @@
                     <br>
                     <div class='proj-text'>
                         <div class='row'>
-<!--                            <div class="col-sm-1"></div>-->
-                            <div class='col-sm-6 wow fadeInLeft' align="center">
+                            <div class="col-sm-1"></div>
+                            <div class='col-sm-5 wow fadeInLeft' align="center">
                                 <img src="img/projects/Cale.jpg" alt='Productive Calender' class='thumbnail proj-img'>
                                 <div class='proj-panel'>
                                     <div class='panel'>
                                         <div class='panel-body'>
                                             <div class="panel-title">Productive Calender</div>
                                             A Django based application that functions as a <strong>complete planner</strong> with features like <strong>event organizing, Google Calender Sync, weather details, on-screen clock, responsive design and a beautiful UI</strong>.<br><br>
-                                            <strong><a href="https://github.com/AnirudhGoel/Calender" target='_blank'>Github</a> |
-                                            <a href="https://productive-calender.herokuapp.com/" target='_blank'>Demo</a></strong>
+                                            <div align="center">
+                                                <a href="https://github.com/AnirudhGoel/Calender" target='_blank'><button type="button" class="btn btn-info proj-link-button"><i class="fab fa-github"></i> Github</button></a>
+                                                <a href="https://productive-calender.herokuapp.com/" target='_blank'><button type="button" class="btn btn-success proj-link-button"><i class="fas fa-magic"></i> Demo</button></a>
+                                            </div>
                                         </div>
                                         <div class='panel-footer'>
                                             Django, PostgreSQL, Heroku CLI, Google Calender API, HTML5, Vanilla CSS3, jQuery
@@ -278,7 +280,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class='col-sm-6 wow fadeInUp' align="center">
+                            <div class='col-sm-5 wow fadeInUp' align="center">
                                 <img src="img/projects/pinterest.png" alt='Pinterest Automatic' class='thumbnail proj-img'>
                                 <div class='proj-panel'>
                                     <div class='panel'>
@@ -287,7 +289,10 @@
                                             This is a webapp to <strong>pin all images of one Pinterest Board to another</strong> automatically. Hosted on Heroku, it uses <strong>Heroku Postgres as Database, flask-user package for User Management, Redis To Go server to store the pinning tasks in a queue</strong>.
                                             Started as a hobby project, it has been approved by Pinterest is currently being used by <strong>100+ users and has re-pinned 200,000+ pins</strong> till date.
                                             <br><br>
-                                            <strong><a href="https://pinautomatic.herokuapp.com/" target='_blank'>Live App</a></strong>
+                                            <div align="center">
+                                                <a href="https://pinautomatic.herokuapp.com/" target='_blank'><button type="button" class="btn btn-success proj-link-button"><i class="fas fa-magic"></i> Demo</button></a>
+                                                <a href="https://github.com/AnirudhGoel/PinterestAutomatic" target="_blank"><button type="button" class="btn btn-success proj-link-button"><i class="fas fa-magic"></i> Demo</button></a>
+                                            </div>
                                         </div>
                                         <div class='panel-footer'>
                                             Flask, Redis To Go, PostgreSQL, Pinterest API, Pinterest OAuth 2.0, Bootstrap
@@ -295,20 +300,23 @@
                                     </div>
                                 </div>
                             </div>
-<!--                            <div class="col-sm-1"></div>-->
+                            <div class="col-sm-1"></div>
                         </div>
                     </div>
                     <div class='proj-text'>
                         <div class='row'>
-                            <div class='col-sm-6 wow fadeInUp' align="center">
+                            <div class="col-sm-1"></div>
+                            <div class='col-sm-5 wow fadeInUp' align="center">
                                 <img src="img/projects/interest.jpg" alt='Interests Ranker' class='thumbnail proj-img'>
                                 <div class='proj-panel'>
                                     <div class='panel'>
                                         <div class='panel-body'>
                                             <div class="panel-title">Interests Ranker</div>
                                             A webapp which displays <strong>common interests</strong> of a group of people in form of a <strong>prioritized list</strong> by reading their Github Profiles. Can be used for knowing the audience for hosting a workshop or educational session or for knowing the strengths of some Hackathon team.<br><br>
-                                            <strong><a href="https://github.com/AnirudhGoel/Interests-Ranker" target='_blank'>Github</a> |
-                                            <a href="https://interests-ranker.herokuapp.com/sample/index.html" target='_blank'>Demo</a></strong>
+                                            <div align="center">
+                                                <a href="https://github.com/AnirudhGoel/Interests-Ranker" target='_blank'><button type="button" class="btn btn-info proj-link-button"><i class="fab fa-github"></i> Github</button></a>
+                                                <a href="https://interests-ranker.herokuapp.com/sample/index.html" target='_blank'><button type="button" class="btn btn-success proj-link-button"><i class="fas fa-magic"></i> Demo</button></a>
+                                            </div>
                                         </div>
                                         <div class='panel-footer'>
                                             PHP, Github API, JS, HTML5, CSS3, Bootstrap
@@ -316,14 +324,18 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class='col-sm-6 wow fadeInRight' align="center">
+                            <div class='col-sm-5 wow fadeInRight' align="center">
                                 <img src="img/projects/ToDo.png" alt='To Do List' class='thumbnail proj-img'>
                                 <div class='proj-panel'>
                                     <div class='panel'>
                                         <div class='panel-body'>
                                             <div class="panel-title">No Server To Do List</div>
                                             A web-app to list down all your To-Do tasks because every now and then we need to write down our chores. A completely front-end based To Do List made using JavaScript, jQuery and Browser Local Storage.<br><br>
-                                            <strong><a href="https://github.com/AnirudhGoel/To-Do-List" target='_blank'>Github</a> | <a href="http://anirudhgoel.github.io/To-Do-List/" target="_blank">Demo</a></strong>
+                                            <div align="center">
+                                                <a href="https://github.com/AnirudhGoel/To-Do-List" target='_blank'><button type="button" class="btn btn-info proj-link-button"><i class="fab fa-github"></i> Github</button></a>
+                                                <a href="https://anirudhgoel.github.io/To-Do-List/" target="_blank"><button type="button" class="btn btn-success proj-link-button"><i class="fas fa-magic"></i> Demo</button></a>
+                                            </div>
+
                                         </div>
                                         <div class='panel-footer'>
                                              Browser Storage, JS, jQuery, HTML5, CSS3, Bootstrap
@@ -331,6 +343,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-sm-1"></div>
                         </div>
                     </div>
                     <br>
@@ -342,7 +355,7 @@
                     <center>
                             &copy; 2015-22 Anirudh Goel |
                         <strong>
-                            <a href="http://madewithlove.org.in" target="_blank" style="color:white;text-decoration:none;">Made with <span style="color: #f7403a;font-size: 22px">&hearts;</span> in India</a>
+                            <a href="//madewithlove.org.in" target="_blank" style="color:white;text-decoration:none;">Made with <span style="color: #f7403a;font-size: 22px">&hearts;</span> in India</a>
                         </strong>
                     </center>
                 </div>
@@ -357,7 +370,7 @@
         <!-- <script src="//use.fontawesome.com/768a40f80a.js"></script> -->
 
         <!-- Typeform version 5 -->
-        <script src="https://kit.fontawesome.com/a710005d2d.js" crossorigin="anonymous"></script>
+        <script src="//kit.fontawesome.com/a710005d2d.js" crossorigin="anonymous"></script>
 
         <script src="//cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
 
